[package]
name = "hotreload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hotreload"
crate-type = ["cdylib"]

[[bin]]
name = "hotreload"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
rustpython-parser = "0.4.0"
anyhow = "1.0"
regex = "1.8.0"
once_cell = "1.18.0"