[package]
name = "firehot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "firehot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
rustpython-parser = "0.4"
anyhow = "1.0"
regex = "1.8"
once_cell = "1.18"
uuid = { version = "1.4", features = ["v4"] }
libc = "0.2"
sha2 = "0.11"
log = "0.4"
env_logger = "0.11"
anstream = "1.0"
owo-colors = "4.3"
base64 = "0.22"
