[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "firehot"
version = "0.1.0"
description = "Wicked fast hot reloading"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.396",
    "ruff>=0.0.292",
    "maturin>=1.0,<2.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "firehot._core"
python-packages = ["firehot"]
python-source = "src"
exclude = ["**/__tests__/**"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]
