[project]
name = "external-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["external_package"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
